--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin:0;
+    padding:0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+nav {
+    position:relative;
+    background-color:thistle;
+    height: 50px;
+    padding: 0 20px;
+    ul{
+        height: inherit;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        li{
+            list-style: none;
+            a{
+                text-decoration: none;
+                color:gray;
+                font-weight: bold;
+                font-size: 20px;
+            }
+        }
+    }
+}
